--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     </dependencies>
 
     <build>
+        <finalName>aop</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
