--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,26 @@
-server.port=8899
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+server.port=9091
+server.servlet.context-path=/aop
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-spring.datasource.name=root
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.jdbc.batch_size=5
+spring.main.allow-circular-references=true
+springdoc.api-docs.path=/api-docs
+
+#Hikari CP Connection Pool
+#maximum number of milliseconds that a client will wait for a connection
+spring.datasource.hikari.connection-timeout=20000
+#minimum number of idle connections maintained by HikariCP in a connection pool
+spring.datasource.hikari.minimum-idle=10
+#maximum pool size
+spring.datasource.hikari.maximum-pool-size=10
+#maximum idle time for connection
+spring.datasource.hikari.idle-timeout=10000
+# maximum lifetime in milliseconds of a connection in the pool after it is closed
+spring.datasource.hikari.max-lifetime=1800000
+#default auto-commit behavior.
+spring.datasource.hikari.auto-commit=true
+
+# http://localhost:9091/aop/swagger-ui/index.html
